# rust_postgres

./: .env  Cargo.toml
migrations/2024-04-13-085111_create_posts/: up.sql
migrations/2024-04-13-085634_create_posts/: down.sql  up.sql
sql/: add_user.sql  get_users.sql  schema.sql
src/: db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs
